--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   crypto: ^3.0.3
   flutter_localizations:
     sdk: flutter
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
