--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   google_sign_in: ^6.2.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
