--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   firebase_core: ^2.30.0
   firebase_auth: ^4.19.2
-  cloud_firestore: ^4.17.0
+  cloud_firestore: ^4.17.2
+  google_maps_flutter: ^2.2.1
   crypto: ^3.0.3
   flutter_localizations:
     sdk: flutter
