--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_auth: ^4.19.2
   cloud_firestore: ^4.17.2
   google_maps_flutter: ^2.2.1
+  google_maps_flutter_web: ^0.5.7
   crypto: ^3.0.3
   flutter_localizations:
     sdk: flutter
